--- a/.github/workflows/build-manager.yml
+++ b/.github/workflows/build-manager.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup need_upload
+      - name: Setup Need Upload
         id: need_upload
         run: |
           if [ ! -z "${{ secrets.BOT_TOKEN }}" ]; then
@@ -72,7 +72,7 @@ jobs:
           fi
 
 
-      - name: Determine manager variant for telegram bot
+      - name: Determine Manager Variant for Telegram Bot
         id: determine
         run: |
           if [ "${{ github.ref_name }}" == "miuix" ] && [ "${{ matrix.spoofed }}" == "true" ]; then
@@ -91,13 +91,13 @@ jobs:
             echo "topicid=${{ vars.MESSAGE_THREAD_ID }}" >> $GITHUB_OUTPUT
           fi
 
-      - name: Run randomizer
+      - name: Run Randomizer
         if: ${{ matrix.spoofed == 'true' && steps.determine.outputs.SKIP != 'true' }}
         run: |
           chmod +x randomizer
           ./randomizer
 
-      - name: Write key
+      - name: Write Key
         if: ${{ ( github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' )) || github.ref_type == 'tag' }}
         run: |
           if [ ! -z "${{ secrets.KEYSTORE }}" ]; then
@@ -122,25 +122,25 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Download arm64 ksud
+      - name: Download ARM64 KSUD
         uses: actions/download-artifact@v4
         with:
           name: ksud-aarch64-linux-android
           path: .
 
-      - name: Download x86_64 ksud
+      - name: Download X86-64 KSUD
         uses: actions/download-artifact@v4
         with:
           name: ksud-x86_64-linux-android
           path: .
 
-      - name: Download arm ksud
+      - name: Download ARM KSUD
         uses: actions/download-artifact@v4
         with:
           name: ksud-armv7-linux-androideabi
           path: .
   
-      - name: Copy ksud to app jniLibs
+      - name: Copy KSUD to App JNILibs
         run: |
           mkdir -p app/src/main/jniLibs/arm64-v8a
           mkdir -p app/src/main/jniLibs/x86_64
@@ -149,18 +149,18 @@ jobs:
           cp -f ../x86_64-linux-android/release/ksud ../manager/app/src/main/jniLibs/x86_64/libksud.so
           cp -f ../armv7-linux-androideabi/release/ksud ../manager/app/src/main/jniLibs/armeabi-v7a/libksud.so
 
-      - name: Build with Gradle
+      - name: Build With Gradle
         if: ${{ steps.determine.outputs.SKIP != 'true' }}
         run: ./gradlew clean assembleRelease
 
-      - name: Upload build artifact
+      - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         if: ${{ ( github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' )) || github.ref_type == 'tag' }}
         with:
           name: ${{ steps.determine.outputs.title }}
           path: manager/app/build/outputs/apk/release/*.apk
 
-      - name: Upload mappings
+      - name: Upload Mappings
         uses: actions/upload-artifact@v4
         if: ${{ ( github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' )) || github.ref_type == 'tag' }}
         with:
